New routes for user notes
