# api/handlers/api.go
@@ -110,6 +110,9 @@ func (a *App) New() *mux.Router {
 	apiCreate.Handle("/user/{userId}/remove-community", api.Middleware(http.HandlerFunc(u.RemoveCommunityFromUserHandler))).Methods("DELETE")
 	apiCreate.Handle("/user/{userId}/ban-community", api.Middleware(http.HandlerFunc(u.BanUserFromCommunityHandler))).Methods("POST")
 	apiCreate.Handle("/user/{userId}/unban-community", api.Middleware(http.HandlerFunc(u.UnbanUserFromCommunityHandler))).Methods("POST")
+	apiCreate.Handle("/users/{userId}/notes", api.Middleware(http.HandlerFunc(u.AddUserNoteHandler))).Methods("POST")
+	apiCreate.Handle("/users/{userId}/notes/{noteId}", api.Middleware(http.HandlerFunc(u.UpdateUserNoteHandler))).Methods("PUT")
+	apiCreate.Handle("/users/{userId}/notes/{noteId}", api.Middleware(http.HandlerFunc(u.DeleteUserNoteHandler))).Methods("DELETE")
 	apiCreate.Handle("/user/{userId}/pending-community-request", api.Middleware(http.HandlerFunc(u.PendingCommunityRequestHandler))).Methods("POST")
 	apiCreate.Handle("/user/{userId}/pending-department-request", api.Middleware(http.HandlerFunc(u.AddUserToPendingDepartmentHandler))).Methods("POST")
 	apiCreate.Handle("/user/{user_id}/notifications/{notification_id}/read", api.Middleware(http.HandlerFunc(u.MarkNotificationAsReadHandler))).Methods("PUT")
